--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hey &#128075;, my name is Juan Jose Espinosa</h1>
+        <h1 class="heading-primary">Hey &#128075;, I'm Juan Jose Espinosa</h1>
         <div class="home-hero__info">
           <p class="text-primary">
             But everyone calls me Juanjo. 
             I'm a Full-Stack Web Developer, passionate about coding and software engineering. 
-            Welcome to my portfolio! Here you will have a chance to see my most recent work. I hope you enjoy it!
+            Welcome to my portfolio!
           </p>
         </div>
         <div class="home-hero__cta">
@@ -148,9 +148,9 @@
             <div class="about__content-details">
               <p class="about__content-details-para">
                 Hey! It's
-                <strong>John Doe</strong>
-                and I'm a <strong> Frontend Web Developer </strong> located in
-                Los Angeles. I've done
+                <strong>Juan Jo</strong>
+                and I'm a <strong> Full-Stack Web Developer </strong> located in
+                Monterrey, Mexico. I've done
                 <strong> remote </strong>
                 projects for agencies, consulted for startups, and collaborated
                 with talented people to create
@@ -158,9 +158,7 @@
                 for both business and consumer use.
               </p>
               <p class="about__content-details-para">
-                I'm a bit of a digital product junky. Over the years, I've used
-                hundreds of web and mobile apps in different industries and
-                verticals. Feel free to
+                Feel free to
                 <strong>contact</strong> me here.
               </p>
             </div>
@@ -197,7 +195,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./css/assets/jpeg/project-mockup-example.jpeg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -221,7 +219,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./css/assets/jpeg/project-mockup-example.jpeg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -245,7 +243,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./css/assets/jpeg/project-mockup-example.jpeg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
