--- a/index.html
+++ b/index.html
@@ -150,30 +150,30 @@
                 Hey! It's
                 <strong>Juan Jo</strong>
                 and I'm a <strong> Full-Stack Web Developer </strong> located in
-                Monterrey, Mexico. I've done
-                <strong> remote </strong>
-                projects for agencies, consulted for startups, and collaborated
+                Monterrey, Mexico. I've developed serveral projects using 
+                different web frameworks and collaborated
                 with talented people to create
-                <strong>digital products </strong>
-                for both business and consumer use.
+                <strong>digital apps </strong>.
               </p>
               <p class="about__content-details-para">
                 Feel free to
                 <strong>contact</strong> me here.
               </p>
             </div>
-            <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
-              >Contact</a
-            >
+            <a href="./index.html#contact" class="btn btn--med btn--theme dynamicBgClr">Contact</a>
           </div>
           <div class="about__content-skills">
             <h3 class="about__content-title">My Skills</h3>
             <div class="skills">
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
+              <div class="skills__skill">Bootstrap</div>
+              <div class="skills__skill">Bulma</div>
               <div class="skills__skill">JavaScript</div>
               <div class="skills__skill">Node.js</div>
               <div class="skills__skill">Express</div>
+              <div class="skills__skill">SQL</div>
+              <div class="skills__skill">3rd party services (APIs)</div>
               <div class="skills__skill">GitHub</div>
               <div class="skills__skill">Insomnia</div>
               <div class="skills__skill">Adobe Suite</div>
@@ -195,7 +195,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./css/assets/jpeg/project-mockup-example.jpeg"
+                src="./css/assets/jpeg/Formula One Demo.jpg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -206,61 +206,64 @@
               <p class="projects__row-content-desc">
                 This deployed app powered with Javascript and Bulma CSS styling, allows users
                 compare drivers' statistics and check the current standings in the competition.
-                This webpage uses two Formula One APIs to fetch information.   
+                This webpage uses two Formula One APIs to fetch information. In collaboration with 
+                Jorge Besnier & David Torres.  
               </p>
               <a
-                href="./project-1.html"
+                href="https://davidtc8.github.io/Formula1-Webpage/"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Go to app</a
               >
             </div>
           </div>
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./css/assets/jpeg/project-mockup-example.jpeg"
+                src="./css/assets/jpeg/Team Profile Generator Demo.jpg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 2</h3>
+              <h3 class="projects__row-content-title">Team Profile Generator</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                This is a Node.js command-line application that takes in information about employees on a software engineering team 
+                and generates an HTML webpage that displays summaries for each person. Because testing is key to making code maintainable, 
+                this project includes unit tests for each part of the code written, ensuring that it passes all of them.
               </p>
               <a
-                href="./project-2.html"
+                href="https://github.com/jcuetos97/Team-Profile-Generator"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Go to app</a
               >
             </div>
           </div>
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./css/assets/jpeg/project-mockup-example.jpeg"
+                src="./css/assets/jpeg/Weather Dashboard Demo.jpg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 3</h3>
+              <h3 class="projects__row-content-title">Weather Dashboard</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                A weather dashboard that allows users to search for a city and obtain specific information about 
+                the current weather (main temperature, humidity levels, wind speed, and UV Index) as well as a general 
+                forecast for the next five days. Cities that users previously looked up will be saved in their local storage. 
+                This application runs in the browser and features dynamically updated HTML and CSS; it uses Bootstrap as style framework 
+                and OpenWeather API for fetching information.
               </p>
               <a
-                href="./project-3.html"
+                href="https://jcuetos97.github.io/Weather-Dashboard/"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Go to app</a
               >
             </div>
           </div>
@@ -356,15 +359,6 @@
             </p>
           </div>
         </div>
-
-        <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
-        <div class="main-footer__lower">
-          &copy; Copyright 2022. Made by
-          <a rel="noreferrer" target="_blank" href="https://www.linkedin.com/in/jcuetos97/"
-            >Juan José Espinosa</a
-          >
-        </div>
-      </div>
     </footer>
 
     <script src="./index.js"></script>
