COOKED.GIF added

--- a/index.html
+++ b/index.html
@@ -174,8 +174,25 @@
             Here is a small glance to my most recent work. 
           </span>
         </h2>
-
         <div class="projects__content">
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./css/assets/gif/COOKED.gif"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">COOKED</h3>
+              <p class="projects__row-content-desc">
+                COOKED is a social app that connects people with a common passion and interest: cooking. Built with Node.JS, MySQL, Sequilize, Multer and more. Deployed in Heroku. In collaboration with 
+                Tere Quintero, Diego Sadurni, Arnol Segovia & Javier Contreras.  
+              </p>
+              <a href="http://cooked.herokuapp.com/welcome" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Go to app</a>
+            </div>
+          </div>
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
