--- a/index.html
+++ b/index.html
@@ -149,18 +149,21 @@
           <div class="about__content-skills">
             <h3 class="about__content-title">My Skills</h3>
             <div class="skills">
-              <div class="skills__skill">HTML</div>
-              <div class="skills__skill">CSS</div>
-              <div class="skills__skill">Bootstrap</div>
-              <div class="skills__skill">Bulma</div>
-              <div class="skills__skill">JavaScript</div>
+              <div class="skills__skill">Javascript(ES6)</div>
+              <div class="skills__skill">React.js</div>
               <div class="skills__skill">Node.js</div>
-              <div class="skills__skill">Express</div>
-              <div class="skills__skill">SQL</div>
-              <div class="skills__skill">3rd party services (APIs)</div>
-              <div class="skills__skill">GitHub</div>
+              <div class="skills__skill">Express.js</div>
+              <div class="skills__skill">MySQL + Sequelize</div>
+              <div class="skills__skill">MongoDB + Mongoose</div>
+              <div class="skills__skill"> Webpack</div>
+              <div class="skills__skill">HTML5/CSS3</div>
+              <div class="skills__skill">Bootstrap/Bulma</div>
+              <div class="skills__skill">REST APIs</div>
+              <div class="skills__skill">Git + GitHub</div>
+              <div class="skills__skill">OOP</div>
               <div class="skills__skill">Insomnia</div>
               <div class="skills__skill">Adobe Suite</div>
+              <div class="skills__skill">Jest.js</div>
             </div>
           </div>
         </div>
