--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
           </span>
         </h2>
         <div class="contact__form-container">
-          <form action="#" class="contact__form">
+          <form action="mailto:jcuetos97@gmail.com" method="POST" enctype="text/plain" name="EmailForm" class="contact__form">
             <div class="contact__form-field">
               <label class="contact__form-label" for="name">Name</label>
               <input
