Added: link to GitHub repo in each project

--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
               <div class="skills__skill">React.js</div>
               <div class="skills__skill">Node.js</div>
               <div class="skills__skill">Express.js</div>
+              <div class="skills__skill">GraphQL</div>
               <div class="skills__skill">MySQL + Sequelize</div>
               <div class="skills__skill">MongoDB + Mongoose</div>
               <div class="skills__skill"> Webpack</div>
@@ -193,7 +194,17 @@
                 COOKED is a social app that connects people with a common passion and interest: cooking. Built with Node.JS, MySQL, Sequilize, Multer and more. Deployed in Heroku. In collaboration with 
                 Tere Quintero, Diego Sadurni, Arnol Segovia & Javier Contreras.  
               </p>
-              <a href="http://cooked.herokuapp.com/welcome" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Go to app</a>
+              <div class="container__app-links">
+                <a 
+                  href="http://cooked.herokuapp.com/welcome" 
+                  class="btn btn--med btn--theme" 
+                  target="_blank"
+                  >Go to app</a
+                >
+                <a class="btn btn--icon" href="https://github.com/jcuetos97/COOKED" target="_blank">
+                  <img src="./css/assets/png/github-ico.png" alt="GitHub Repo Link">
+                </a>
+              </div>
             </div>
           </div>
           <div class="projects__row">
@@ -206,19 +217,24 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Formula One Webpage</h3>
+              <h3 class="projects__row-content-title">Formula One App</h3>
               <p class="projects__row-content-desc">
                 This deployed app powered with Javascript and Bulma CSS styling, allows users
                 compare drivers' statistics and check the current standings in the competition.
                 This webpage uses two Formula One APIs to fetch information. In collaboration with 
                 Jorge Besnier & David Torres.  
               </p>
-              <a
-                href="https://davidtc8.github.io/Formula1-Webpage/"
-                class="btn btn--med btn--theme dynamicBgClr"
-                target="_blank"
-                >Go to app</a
-              >
+              <div class="container__app-links">
+                <a
+                  href="https://davidtc8.github.io/Formula1-Webpage/"
+                  class="btn btn--med btn--theme"
+                  target="_blank"
+                  >Go to app</a
+                >
+                <a class="btn btn--icon" href="https://github.com/jcuetos97/Formula1-Webpage" target="_blank">
+                  <img  src="./css/assets/png/github-ico.png" alt="GitHub Repo Link">
+                </a>
+              </div>
             </div>
           </div>
           <div class="projects__row">
@@ -237,12 +253,17 @@
                 and generates an HTML webpage that displays summaries for each person. Because testing is key to making code maintainable, 
                 this project includes unit tests for each part of the code written, ensuring that it passes all of them.
               </p>
-              <a
-                href="https://github.com/jcuetos97/Team-Profile-Generator"
-                class="btn btn--med btn--theme dynamicBgClr"
-                target="_blank"
-                >Go to app</a
-              >
+              <div class="container__app-links">
+                <a
+                  href="https://github.com/jcuetos97/Team-Profile-Generator"
+                  class="btn btn--med btn--theme dynamicBgClr"
+                  target="_blank"
+                  >Go to app</a
+                >
+                <a class="btn btn--icon" href="https://github.com/jcuetos97/Team-Profile-Generator" target="_blank">
+                  <img  src="./css/assets/png/github-ico.png" alt="GitHub Repo Link">
+                </a>
+              </div>
             </div>
           </div>
           <div class="projects__row">
@@ -255,31 +276,36 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Weather Dashboard</h3>
+              <h3 class="projects__row-content-title">Social Network API</h3>
               <p class="projects__row-content-desc">
-                A weather dashboard that allows users to search for a city and obtain specific information about 
-                the current weather (main temperature, humidity levels, wind speed, and UV Index) as well as a general 
-                forecast for the next five days. Cities that users previously looked up will be saved in their local storage. 
-                This application runs in the browser and features dynamically updated HTML and CSS; it uses Bootstrap as style framework 
-                and OpenWeather API for fetching information.
+                API for a social network web application where users can share their thoughts, 
+                react to friends' thoughts, and create a friend list. It uses Express.js for routing, 
+                a MongoDB database, the Mongoose ODM, and Moment.js to format timestamps. 
+                The seed data is created using Insomnia.
               </p>
-              <a
-                href="https://jcuetos97.github.io/Weather-Dashboard/"
-                class="btn btn--med btn--theme dynamicBgClr"
-                target="_blank"
-                >Go to app</a
-              >
+              <div class="container__app-links">
+                <a
+                  href="https://github.com/jcuetos97/Social-Network-API"
+                  class="btn btn--med btn--theme"
+                  target="_blank"
+                  >Go to app</a
+                >
+                <a class="btn btn--icon" href="https://github.com/jcuetos97/Social-Network-API" target="_blank">
+                  <img  src="./css/assets/png/github-ico.png" alt="GitHub Repo Link">
+                </a>
+              </div>
+              
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section id="contact" class="contact sec-pad dynamicBg">
+    <section id="contact" class="contact sec-pad">
       <div class="main-container">
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main heading-sec__main--lt">Contact</span>
           <span class="heading-sec__sub heading-sec__sub--lt">
-            Please feel free to contact me!
+            email: jcuetos97@gmail.com  
           </span>
         </h2>
         <div class="contact__form-container">
