Added: CV.pdf and project demo gifs in asset folder

--- a/index.html
+++ b/index.html
@@ -120,11 +120,15 @@
       <div class="main-container">
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
-          <span class="heading-sec__sub">
-            I graduated as an architect form Monterrey Tec University. 
-            However, I've always been interested in technology and innovation, and that's why a few months ago I decided to switch gears and embark myself in a new, crazy adventure: 
-            becoming a full-stack web developer. 
-          </span>
+          <div class="heading-sec__sub">
+            <p>
+              Full-stack web developer, specialized in MERN stack, with strong background in graphic design. 
+              Trained at Tecnologico de Monterrey with Certificate in Web Development, innovative problem-solver passionate about developing apps and web solutions. 
+              Strengths in creativity, teamwork, and building projects from ideation to execution.
+            </p>
+            <br>
+            <a class="btn btn--med btn--theme" target="_blank" href="./css/assets/CV.pdf" download="My_CV.pdf">Resume</a> 
+          </div>
         </h2>
         <div class="about__content">
           <div class="about__content-main">
@@ -134,7 +138,7 @@
                 Hey! It's
                 <strong>Juan Jo</strong>
                 and I'm a <strong> Full-Stack Web Developer </strong> located in
-                Monterrey, Mexico. I've developed serveral projects using 
+                Monterrey, Mexico. I've developed several projects using 
                 different web frameworks and collaborated
                 with talented people to create
                 <strong>digital apps </strong>.
@@ -144,7 +148,7 @@
                 <strong>contact</strong> me here.
               </p>
             </div>
-            <a href="./index.html#contact" class="btn btn--med btn--theme dynamicBgClr">Contact</a>
+            <a href="./index.html#contact" class="btn btn--med btn--theme">Contact</a>
           </div>
           <div class="about__content-skills">
             <h3 class="about__content-title">My Skills</h3>
@@ -199,9 +203,10 @@
                   href="http://cooked.herokuapp.com/welcome" 
                   class="btn btn--med btn--theme" 
                   target="_blank"
+                  rel="noreferrer"
                   >Go to app</a
                 >
-                <a class="btn btn--icon" href="https://github.com/jcuetos97/COOKED" target="_blank">
+                <a class="btn btn--icon" href="https://github.com/jcuetos97/COOKED" target="_blank" rel="noreferrer">
                   <img src="./css/assets/png/github-ico.png" alt="GitHub Repo Link">
                 </a>
               </div>
@@ -231,8 +236,8 @@
                   target="_blank"
                   >Go to app</a
                 >
-                <a class="btn btn--icon" href="https://github.com/jcuetos97/Formula1-Webpage" target="_blank">
-                  <img  src="./css/assets/png/github-ico.png" alt="GitHub Repo Link">
+                <a class="btn btn--icon" href="https://github.com/jcuetos97/Formula1-Webpage" target="_blank" rel="noreferrer">
+                  <img src="./css/assets/png/github-ico.png" alt="GitHub Repo Link">
                 </a>
               </div>
             </div>
@@ -258,10 +263,11 @@
                   href="https://github.com/jcuetos97/Team-Profile-Generator"
                   class="btn btn--med btn--theme dynamicBgClr"
                   target="_blank"
+                  rel="noreferrer"
                   >Go to app</a
                 >
-                <a class="btn btn--icon" href="https://github.com/jcuetos97/Team-Profile-Generator" target="_blank">
-                  <img  src="./css/assets/png/github-ico.png" alt="GitHub Repo Link">
+                <a class="btn btn--icon" href="https://github.com/jcuetos97/Team-Profile-Generator" target="_blank" rel="noreferrer">
+                  <img src="./css/assets/png/github-ico.png" alt="GitHub Repo Link">
                 </a>
               </div>
             </div>
@@ -269,7 +275,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./css/assets/jpeg/Weather Dashboard Demo.jpg"
+                src="./css/assets/gif/SOCIALNET.gif"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -288,13 +294,43 @@
                   href="https://github.com/jcuetos97/Social-Network-API"
                   class="btn btn--med btn--theme"
                   target="_blank"
+                  rel="noreferrer"
                   >Go to app</a
                 >
-                <a class="btn btn--icon" href="https://github.com/jcuetos97/Social-Network-API" target="_blank">
+                <a class="btn btn--icon" href="https://github.com/jcuetos97/Social-Network-API" target="_blank" rel="noreferrer">
                   <img  src="./css/assets/png/github-ico.png" alt="GitHub Repo Link">
                 </a>
               </div>
-              
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./css/assets/gif/SOCIALNET.gif"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">E-commerce backend</h3>
+              <p class="projects__row-content-desc">
+                A MySQL database and application backend for an e-commerce site, where users are able to interact and manipulate data: 
+                they can create, update, delete or view desired products, tags and categories. 
+                Powered with MySQL2, Express, Sequelize and Dotenv.
+              </p>
+              <div class="container__app-links">
+                <a
+                  href="https://github.com/jcuetos97/E-commerce-backend"
+                  class="btn btn--med btn--theme"
+                  target="_blank"
+                  rel="noreferrer"
+                  >Go to app</a
+                >
+                <a class="btn btn--icon" href="https://github.com/jcuetos97/E-commerce-backend" target="_blank" rel="noreferrer">
+                  <img  src="./css/assets/png/github-ico.png" alt="GitHub Repo Link">
+                </a>
+              </div>
             </div>
           </div>
         </div>
@@ -385,7 +421,7 @@
           <div class="main-footer__row main-footer__row-2">
             <h4 class="heading heading-sm text-lt">Juan Jose Espinosa</h4>
             <p class="main-footer__short-desc">
-              Full-stack Web Developer with strong passion for design and software engineering.
+              Full-stack web developer with strong passion for design and software engineering.
             </p>
           </div>
         </div>
